--- a/HT5/sample.bib
+++ b/HT5/sample.bib
@@ -5,14 +5,6 @@
   publisher={Wiley New York}
 }
 
-@book{jung2011hyers,
-  title={Hyers-Ulam-Rassias stability of functional equations in nonlinear analysis},
-  author={Jung, Soon-Mo},
-  volume={48},
-  year={2011},
-  publisher={Springer Science \& Business Media}
-}
-
 @book{abbott2012understanding,
   title={Understanding analysis},
   author={Abbott, Stephen},
@@ -28,19 +20,24 @@
   publisher={McGraw-hill New York}
 }
 
-@MISC {3534792,
-    TITLE = {Question about metric and compactness},
-    AUTHOR = {Paul, Sinclair},
-    HOWPUBLISHED = {Mathematics Stack Exchange},
-    NOTE = {URL:https://math.stackexchange.com/q/3534792 (version: 2020-02-05)},
-    EPRINT = {https://math.stackexchange.com/q/3534792},
-    year={2020},
-    URL = {https://math.stackexchange.com/q/3534792}
+@book{niculescu2006convex,
+	title={Convex functions and their applications},
+	author={Niculescu, Constantin and Persson, Lars-Erik},
+	year={2006},
+	publisher={Springer}
 }
 
-@book{naber1997topology,
-  title={Topology, geometry, and gauge fields},
-  author={Naber, Gregory L and Naber, Gregory L},
-  year={1997},
-  publisher={Springer}
+@book{binmore1982mathematical,
+	title={Mathematical Analysis: a straightforward approach},
+	author={Binmore, Kenneth George and Binmore, Kenneth George},
+	year={1982},
+	publisher={Cambridge University Press}
+}
+
+@book{tiel1984convex,
+	title={Convex analysis},
+	author={Tiel, Jan van},
+	number={BOOK},
+	year={1984},
+	publisher={John Wiley}
 }
