--- a/Cuaderno/main.tex
+++ b/Cuaderno/main.tex
@@ -8,8 +8,8 @@
 \setcounter{page}{1}
 %----------------------------------------
 
-\input{/Users/rudiks/Desktop/Plantilla/Secciones/1 - Reales.tex}
-
+%\input{Secciones/1 - Reales.tex}
+\input{Secciones/2 - Topología.tex}
 
 
 
