--- a/Cuaderno/main.tex
+++ b/Cuaderno/main.tex
@@ -8,8 +8,10 @@
 \setcounter{page}{1}
 %----------------------------------------
 
-\input{Secciones/1 - Reales.tex}
-\input{Secciones/2 - Topología.tex}
+%\input{Secciones/1 - Reales.tex}
+%\input{Secciones/2 - Topología.tex}
+\input{Secciones/3 - Sucesiones.tex}
+
 
 
 
