--- a/Cuaderno/Secciones/2 - Topología.tex
+++ b/Cuaderno/Secciones/2 - Topología.tex
@@ -542,3 +542,15 @@ Reales y topología.
 \includepdf[pages=-]{Apendices/Repaso1.pdf}
 \includepdf[pages=-]{Apendices/Parcial1.pdf}
 
+\subsubsection{Soluciones}
+
+\begin{center}
+	\includegraphics[scale=0.45]{images/2/28}
+\end{center}
+\begin{center}
+	\includegraphics[scale=0.45]{images/2/29}
+\end{center}
+\begin{center}
+	\includegraphics[scale=0.45]{images/2/30}
+\end{center}
+
